Add possibility of observation an delete endpoints url injection.